complete authentication login and main actors create backend part

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,5 @@ spring.jpa.open-in-view=false
 spring.thymeleaf.cache=false
 
 api.base.path = http://localhost:7050  // this the port i set where tomcat run
+
+spring.main.allow-circular-references = true
